Fix PDF formatting and header spacing for Surge XT Manual

--- a/assets/manual/manual-xt.css
+++ b/assets/manual/manual-xt.css
@@ -9,24 +9,24 @@ thead {
   font-size: 4em;
   margin: 0;
 }
-#pdf-version {
+.pdf-hide {
   text-align: center;
-  font-size: 2em;
-  margin: 0.5em 0 1em 0;
 }
 h1 {
   margin-top: 4em;
-  margin-bottom: 0em;
+  margin-bottom: 1em;
 }
 h2 {
   margin-top: 3em;
-  margin-bottom: 0em;
+  margin-bottom: 1em;
 }
 h3 {
   margin-top: 1.5em;
+  margin-bottom: 0.5em;
 }
 h4 {
-  margin-top: 2em;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
 }
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
